up closure date

--- a/views/admin/closureDate.hbs
+++ b/views/admin/closureDate.hbs
@@ -42,14 +42,12 @@
                                 <td>
                                     <input type="date" name="txtStartDate"> 
                                 </td> 
-                                <td style="color: brown;">{{errorMessage}}</td>
                             </tr>
                             <tr>
                                 <td>End Date : </td>
                                 <td>
                                     <input type="date" name="txtEndDate">
                                 </td>
-                                <td  style="color: brown;">{{errorMessage}}</td>
 
                             </tr>
 
@@ -58,6 +56,7 @@
                                 <td><input type="submit" value="Add" class="insertButton"></td>
                             </tr>
                             <td style="width:40%; font-size:12px; color: rgb(32, 193, 59); ">{{message}}</td>
+                            <td style="width:40%; font-size:12px; color: rgb(193, 32, 32); ">{{errMessage}}</td>
 
                         </form>
                     </table>
