--- a/views/admin/viewDetail.hbs
+++ b/views/admin/viewDetail.hbs
@@ -101,7 +101,7 @@
             </div> 
         </div>
         <br>
-        <div class="box">
+        <div class="box_comment">
             <br>Comments:
             <ul id="comments">
                 {{#each viewDetail.comments}} 
