--- a/views/staff/allFileSubmit.hbs
+++ b/views/staff/allFileSubmit.hbs
@@ -82,6 +82,16 @@
                         </tr>
                         
                         <tr>
+                            <td class="accountManagement_title">Post Type: </td>
+                            <td>
+                                <select name="txtNamePostType">
+                                        <option value="userName">Current Name</option>
+                                        <option value="Anonymous">Anonymous</option>
+                                </select>
+                            </td> 
+                        </tr>
+
+                        <tr>
                             <td><label class="accountManagement_title" for="myFile">Select a file:</label></td>
                             <td><input type="file" id="myFile" name="uploadFiles" multiple></td>
                         </tr>
