--- a/views/staff/viewDetail.hbs
+++ b/views/staff/viewDetail.hbs
@@ -115,7 +115,7 @@
                 <input type="hidden" name="postId" value="{{viewDetail._id}}">
                 <input type="hidden" value="{{viewDetail.email}}" name="email">
                 <textarea name="content"></textarea>
-                <button type="submit">Send</button>
+                <button type="submit">Save</button>
             </form>
         </div>
         
