--- a/public/css/admin_layout.css
+++ b/public/css/admin_layout.css
@@ -287,4 +287,23 @@ div.top_content_updateDate table {
 
 
 
-/* ================= Paging  ================= */
+/* ================= Manager CSS  ================= */
+
+
+
+div.categoriesTable{
+    height: 400px;
+    overflow-y: auto;
+    padding: 10px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+.categoriesTable::-webkit-scrollbar {
+    display: none;
+}
+div.categoriesTable table{
+    width: 100%;
+    height: 100%;
+}
+
+/* ================= (END) Manager CSS  ================= */
