--- a/views/partial/headercoordinator.hbs
+++ b/views/partial/headercoordinator.hbs
@@ -14,7 +14,7 @@
                                 <a href="../staff">Home </a>
                             </li>                 
                             <li>
-                                <a href="../staff/viewAll">View Submitted File</a>
+                                <a href="../staff/viewAll">View Ideas</a>
                             </li>
                             <li>
                                 <a href="../">Logout</a>
