--- a/public/css/admin_layout.css
+++ b/public/css/admin_layout.css
@@ -298,12 +298,12 @@ div.categoriesTable{
     margin-top: 20px;
     margin-bottom: 20px;
 }
-.categoriesTable::-webkit-scrollbar {
-    display: none;
-}
 div.categoriesTable table{
     width: 100%;
     height: 100%;
+}
+div.chart{
+    text-align: center;
 }
 
 /* ================= (END) Manager CSS  ================= */
