--- a/views/manager/addCategory.hbs
+++ b/views/manager/addCategory.hbs
@@ -26,7 +26,7 @@
                             <td class="accountManagement_title">Name : </td>
                             <td><input type="text" class="accountManagement" name="txtNewCate"> </td> 
                         </tr>
-                            
+                            <td style="width:40%; font-size:12px; color:rgb(32, 193, 59); ">{{errorName}}</td>
                         <tr>
                             <td></td>
                             <td><input type="submit" value="Insert" class="insertButton"></td>
