view ideas manager

--- a/views/partial/headerManager.hbs
+++ b/views/partial/headerManager.hbs
@@ -17,7 +17,9 @@
                             <li>
                                 <a href="../manager/addCategory">Category Management</a>
                             </li>    
-                            
+                            <li>
+                                <a href="../manager/viewPopularIdeas">View Ideas</a>
+                            </li>
                             <li>
                                 <a href="../manager/staticDashboard">Static Dashboard</a>
                             </li>
