--- a/views/partial/headercoordinator.hbs
+++ b/views/partial/headercoordinator.hbs
@@ -11,10 +11,10 @@
                         <ul>
                             
                             <li>
-                                <a href="../staff">Home </a>
+                                <a href="../coordinator">Home </a>
                             </li>                 
                             <li>
-                                <a href="../staff/viewAll">View Ideas</a>
+                                <a href="../coordinator/viewAll">View Ideas</a>
                             </li>
                             <li>
                                 <a href="../">Logout</a>
