--- a/views/staff/seeIdea.hbs
+++ b/views/staff/seeIdea.hbs
@@ -28,7 +28,7 @@
 
                                 <option value="MostLikeAndDislike">Most Like & Dislike Ideas</option>
 
-                                <option value="MostViewed">Most Viewed Idea</option>
+                                <option value="MostViewed">Most Viewed Ideas</option>
 
                             </select>
                         </form>
