--- a/views/login.hbs
+++ b/views/login.hbs
@@ -21,7 +21,7 @@
             </div>
             <form  action="../doLogin" method="post" class="input-group">
                 <input type="text" class="input-field" placeholder="User Id" name="txtUser" required>
-                <input type="text" class="input-field" placeholder="Enter password" name="txtPassword" required>
+                <input type="password" class="input-field" placeholder="Enter password" name="txtPassword" required>
                 <input type="checkbox" class="check-box"><span>Remember Password</span>
                 <h2 style="color: brown;" >{{errorMsg}}</h2>
                 <button type="submit" class="submit-btn">Log In</button>
