--- a/views/staff/seeIdea.hbs
+++ b/views/staff/seeIdea.hbs
@@ -26,7 +26,7 @@
 
                                 <option value="LatestIdeas">Latest Ideas</option>
 
-                                <option value="MostLikeAndDislike">Most Like & Dislike Ideas</option>
+                                <option value="MostLikeAndDislike">Most Popular Ideas</option>
 
                                 <option value="MostViewed">Most Viewed Ideas</option>
 
