--- a/public/css/login.css
+++ b/public/css/login.css
@@ -3,6 +3,11 @@
     margin: 0;
     font-family: sans-serif;
 }
+@media only screen
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+  }
 .hero{
     height: 100%;
     width: 100%;
