--- a/public/css/admin_layout.css
+++ b/public/css/admin_layout.css
@@ -2,7 +2,11 @@ div.top_content {
     width: 100%;
     height: 37%;
 }
-
+@media only screen
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+  }
 div.top_content table{
     width: 40%;
     height: 75%;
