--- a/public/css/normal_layout.css
+++ b/public/css/normal_layout.css
@@ -13,6 +13,11 @@ div.intro_image_content{
     width: 100%;
     height: 100%;
 }
+@media only screen
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+  }
 /*=============================== Header ===============================*/
 
 div.leftSideHeader {
