--- a/public/css/seeIdea.css
+++ b/public/css/seeIdea.css
@@ -9,6 +9,11 @@ div.container{
     height: 800px;
     
 }
+@media only screen
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+  }
 
 /*=============================== Header ===============================*/
 
