--- a/public/css/seeIdeaDuyAnhCustom.css
+++ b/public/css/seeIdeaDuyAnhCustom.css
@@ -8,7 +8,11 @@ div.container{
     width: 100%;
     height: 900px;
 }
-
+@media only screen
+  and (min-device-width: 320px) 
+  and (max-device-width: 480px)
+  and (-webkit-min-device-pixel-ratio: 2) {
+  }
 /*=============================== Header ===============================*/
 
 div.leftSideHeader {
