--- a/views/manager/addCategory.hbs
+++ b/views/manager/addCategory.hbs
@@ -57,7 +57,7 @@
                                     <td>
                                         <button>
                                             <a href="../manager/deleteCategory?id={{_id}}" 
-                                            onclick="return confirm('Are You Sure to Delete ?')">
+                                            onclick="return confirm('Do you want to delete ?')">
                                                 <img src="https://icon-library.com/images/red-recycle-bin-icon/red-recycle-bin-icon-18.jpg"
                                                     width="18" height="18">
                                                     Delete
