--- a/views/partial/headerManager.hbs
+++ b/views/partial/headerManager.hbs
@@ -21,7 +21,7 @@
                                 <a href="../manager/viewPopularIdeas">View Ideas</a>
                             </li>
                             <li>
-                                <a href="../manager/staticDashboard">Static Dashboard</a>
+                                <a href="../manager/staticDashboard">Statistical Dashboard</a>
                             </li>
                             <li>
                                 <a href="../manager/downloadCategory">Category Download</a>
