--- a/views/partial/headerStaff.hbs
+++ b/views/partial/headerStaff.hbs
@@ -5,7 +5,6 @@
 
             <h1> Idea Collections System </h1>
         </div>
-        
         <div class="left_navigation_bar ">    
                 <nav>
                         <ul>
@@ -17,7 +16,7 @@
                                 <a href="../staff/allFileSubmit">Submit File</a>
                             </li>    
                             <li>
-                                <a href="../staff/viewAll">View Submitted File</a>
+                                <a href="../staff/viewAll">View Ideas</a>
                             </li>
                             <li>
                                 <a href="../">Logout</a>
