--- a/public/css/normal_layout.css
+++ b/public/css/normal_layout.css
@@ -13,11 +13,7 @@ div.intro_image_content{
     width: 100%;
     height: 100%;
 }
-@media only screen
-  and (min-device-width: 320px) 
-  and (max-device-width: 480px)
-  and (-webkit-min-device-pixel-ratio: 2) {
-  }
+
 /*=============================== Header ===============================*/
 
 div.leftSideHeader {
@@ -111,3 +107,43 @@ div.footer {
     border-bottom-left-radius: 10px;
 
 }
+@media only screen
+    and (max-width: 525px) {
+        div.container{
+            width: 100%;
+            height: 750px;
+            
+        }
+        div.greeting{
+            display: none;
+        }
+        div.leftSideHeader {
+            width: 100%;
+            height:10%;
+            background-color: #203b5b;
+            
+            border-top-left-radius: 10px;
+            text-align: center;
+        }
+        nav ul li {
+            text-decoration: none;
+            padding: 24px 10px;
+            color: white;
+            display: inline-block;
+            list-style-type: none;
+        }
+        nav ul li a {
+            text-decoration: none;
+            padding: 5px;
+            color: white;
+        }
+        div.main_Content {
+            width: 100%;
+            height: 80%;
+            background-color: #ffffff;
+            float: left;
+            border-top-right-radius: 10px;
+            display:table;
+        
+        }
+    }
