--- a/public/css/responsive.css
+++ b/public/css/responsive.css
@@ -1,3 +1,14 @@
+* {
+    box-sizing: border-box;
+}
+body {
+    background-color: #7cade6;
+}
+div.container{
+    width: 100%;
+    height: 750px;
+    
+}
 /*=============================== Header ===============================*/
 
 div.leftSideHeader {
@@ -7,10 +18,7 @@ div.leftSideHeader {
     
     border-top-left-radius: 10px;
     text-align: center;
-
-
 }
-
 
 div.greeting {
     width: 100%;
@@ -35,10 +43,6 @@ div.left_navigation_bar{
     height: 70%;
 
 }
-nav ul li {
-    border: 1px solid #2a4565;
-    list-style-type: none;
-}
 nav ul li:hover {
     background-color: #7cade6;
     border: 1px solid #7cade6;
@@ -50,6 +54,7 @@ nav ul li {
     padding: 24px 10px;
     color: white;
     display: inline-block;
+    list-style-type: none;
 }
 nav ul li a {
     text-decoration: none;
