--- a/views/staff/allFileSubmit.hbs
+++ b/views/staff/allFileSubmit.hbs
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Add Category</title>
-    <link rel="stylesheet" href="/css/normal_layout.css" type="text/css">
-    <link rel="stylesheet" href="/css/admin_layout.css" type="text/css">
+    <link rel="stylesheet" href="/css/seeIdea.css" type="text/css">
  
 </head>
 <body>
