--- a/public/css/seeIdea.css
+++ b/public/css/seeIdea.css
@@ -257,6 +257,7 @@ div.footer {
         nav ul li a {
             text-decoration: none;
             color: white;
+            padding: 15px;
         }
         div.main_Content {
             width: 100%;
